--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
 margin: 0;
 padding: 0;
+background-color: #000000;
 }
 div {
 overflow: hidden;
@@ -8,11 +9,12 @@ box-sizing: border-box;
 }
 .outer-grid {
 position: relative;
+left: 380px;
 float: left;
 width: 33.3%;
 padding-bottom: 33.3%;
-border: 3px solid rgb(64, 64, 64);
-background-color: rgb(121, 121, 121);
+border: 3px solid rgb(252, 252, 252);
+background-color: rgb(0, 0, 0);
 }
 .outer-square {
 position: absolute;
@@ -20,7 +22,7 @@ left: 0;
 top: 0;
 width: 90%;
 height: 90%;
-background-color: rgb(121, 121, 121);
+background-color: rgb(247, 247, 247);
 margin: 5%;
 display: -webkit-flex;
 -webkit-flex-wrap: wrap;
@@ -31,7 +33,7 @@ flex-wrap: wrap;
 .inner-grid {
 width: 33.3%;
 height: 33.3%;
-border: 1px solid rgb(255, 255, 255);
+border: 1px solid rgb(0, 221, 255);
 display: table;
 }
 .inner-square {
@@ -44,6 +46,12 @@ vertical-align: middle;
 }
 
 .grid-container{
-    border: solid 2px red;
+    border: none;
 }
 
+
+
+.checker{
+    position: absolute;
+    left: 150px;
+}
